--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token": "Nzk1OTQwODkzNzA5OTU5MTc4.X_QruA.hEKATgJ_gm-jL17QGogeNRkHxBo"
+    "token": "your Discord bot token"
 }
