--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,6 @@ node_modules/ws/lib/validation.js
 node_modules/ws/lib/websocket-server.js
 node_modules/ws/lib/websocket.js
 config.json
+config.json
+json/775016095596937238.json
+config.json
