modules are live!

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@ json/775016095596937238.json
 images/
 json/
 audio/
+ffmpeg.exe
+commands/not working/help.js
+commands/not working/hint.js
+commands/not working/mod.js
+commands/not working/nick.js
+commands/not working/ping.js
+commands/not working/room.js
+commands/not working/rooms.js
+commands/not working/sounds.js
+commands/not working/trigger.js
+commands/not working/triggers.js
