--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "node-fetch": "^2.6.1",
+    "node-pre-gyp": "^0.17.0",
+    "sequelize": "^6.4.0",
+    "twitch": "^4.4.2"
   }
 }
