--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,4 @@ ffmpeg.exe
 image/
 .eslintrc.json
 config.json
-config.json
-commands/not working/help.js
-commands/not working/hint.js
-commands/not working/mod.js
-commands/not working/nick.js
-commands/not working/ping.js
-commands/not working/room.js
-commands/not working/rooms.js
-commands/not working/sounds.js
-commands/not working/trigger.js
-commands/not working/triggers.js
+commands/not working/
