--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "@keyv/mongo": "^1.1.0",
     "discord.js": "^12.5.1",
+    "keyv": "^4.0.3",
     "node-fetch": "^2.6.1",
     "node-pre-gyp": "^0.17.0",
     "twitch": "^4.4.2"
