--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.1"
   }
 }
